third_party/rust/chromium_crates_io/vendor/zerocopy-0.8.23/tests/ui-nightly/transmute-ref-src-dst-generic.stderr
error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> tests/ui-nightly/transmute-ref-src-dst-generic.rs:18:5
   |
18 |     transmute_ref!(t)
   |     ^^^^^^^^^^^^^^^^^
   |
   = note: source type: `T` (this type does not have a fixed size)
   = note: target type: `U` (this type does not have a fixed size)
   = note: this error originates in the macro `$crate::assert_size_eq` which comes from the expansion of the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> tests/ui-nightly/transmute-ref-src-dst-generic.rs:18:5
   |
18 |     transmute_ref!(t)
   |     ^^^^^^^^^^^^^^^^^
   |
   = note: source type: `AlignOf<T>` (size can vary because of T)
   = note: target type: `MaxAlignsOf<T, U>` (size can vary because of T)
   = note: this error originates in the macro `$crate::assert_align_gt_eq` which comes from the expansion of the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)
